# meshtrex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: AUTONOMOUS_STREAMING_SYSTEM.md  GPU_DRIVEN_ARCHITECTURE_ANALYSIS.md  PAGE_EVICTION_AND_BUFFER_MANAGEMENT_ANALYSIS.md  activeBlockFilteringPass.cpp  activeBlockFilteringPass.h  autonomousDGCExample.tmp  autonomousDGCSystem.cpp  autonomousDGCSystem.h  blockFiltering.cpp  blockFiltering.h  blockFilteringTestUtils.h  buffer.cpp  buffer.h  camera.h  common.h  config.h  cpuProfiler.h  device.cpp  device.h  deviceGeneratedCommands.cpp  deviceGeneratedCommands.h  dgcGenerationPipeline.cpp  dgcGenerationPipeline.h  dgcRenderingPipeline.cpp  dgcRenderingPipeline.h  extern.cpp  extractionManager.cpp  extractionManager.h  extractionOutput.h  extractionPipeline.cpp  extractionPipeline.h  extractionTestUtils.cpp  extractionTestUtils.h  filteringManager.cpp  filteringManager.h  filteringOutput.h  globalExtractionBuffers.h  gpuProfiler.h  image.cpp  image.h  (+38 more)
src/shaders/: autonomousExtractionSelection.comp.glsl  computeMinMax.comp.glsl  computeMinMax_overlap.comp.glsl  dgcGeneration.comp.glsl  dgcRenderingGeneration.comp.glsl  extract.mesh.glsl  extract.task.glsl  extractPmb.task.glsl  extractPmb2.mesh.glsl  extract_context.task.glsl  extract_gem.task.glsl  extract_pt.task.glsl  krekowski.mesh.glsl  krekowski.task.glsl  marching_cubes.mesh.glsl  marching_cubes.task.glsl  marching_cubes_pmb.mesh.glsl  marching_cubes_pmb.task.glsl  minMaxLeaf.comp.glsl  minMaxOctreeReduce.comp.glsl  objViewer.frag.glsl  objViewer.vert.glsl  occupiedBlockFiltering.comp.glsl  occupiedBlockPrefixSum.comp.glsl  occupiedBlockPrefixSum_overlap.comp.glsl  occupiedBlockSharedMemory.comp.glsl  persistent.mesh.glsl  persistent.task.glsl  persistent_estimation.mesh.glsl  persistent_estimation.task.glsl  persistent_geometry_culling.task.glsl  persistent_geometry_rendering.mesh.glsl  persistent_overlap.mesh.glsl  persistent_overlap.task.glsl  persistent_seamless.mesh.glsl  persistent_seamless.task.glsl  render.frag.glsl  render.mesh.glsl  render.task.glsl  streamingMinMax.comp.glsl  (+18 more)
